# alphacodings

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  buildext.py  notes.md  noxfile.py  pyproject.toml  requirements.txt
.github/: dependabot.yml  stale.yml
.github/workflows/: CI.yml  publishing.yml
alphacodings/: __init__.py
alphacodings/_fastest/: base26.py  base52.py  common.py
alphacodings/_native/: __init__.py  base26.py  base52.py  common.py
benchmark/: __main__.py  plotting.py  profiling.py
examples/: benchmark.html
include/: base26.h  base26.hpp  base52.h  base52.hpp  common.h
src/: alphacodings.cpp  base26.cpp  base52.cpp  bindings.cpp  common.cpp
src/alphacodings/: __init__.py  base26.py  base52.py  common.py
src/alphacodings/_native/: base26.py  base52.py  common.py
src/python/: alphacodings.py
tests/: conftest.py  test_base26.py  test_base52.py  test_version.py
tests/_core/: test_base26.py  test_base52.py
tests/_native/: test_base26.py  test_base52.py
